<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="hra">HRA</string>
    <string name="ta">TA</string>
    <string name="ctc">CTC</string>
    <string name="title_activity_fab">FabActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="view_transactions">View Transactions</string>
    <string name="send_money">Send Money</string>
    <string name="view_balance">View Balance</string>

</resources>