<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.ranganayaki.myapplication.recgrd.SharedViewModel"/>

        <variable
            name="vm"
            type="SharedViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".recgrd.RecSalaryDetailsFragment" >

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/basic_salary"
            android:hintTextColor="#757575"
            android:inputType="numberDecimal"
            android:onTextChanged="@{ (txt, st, ed, cn) -> vm.onBasicSalaryChanged(txt.toString()) }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hra"
            android:inputType="numberDecimal"
            android:onTextChanged="@{ (txt, st, ed, cn) -> vm.onHraChanged(txt.toString()) }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextNumberDecimal3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/ta"
            android:inputType="numberDecimal"
            android:onTextChanged="@{ (txt, st, ed, cn) -> vm.onTaChanged(txt.toString()) }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal2"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextNumberDecimal4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/ctc"
            android:inputType="numberDecimal"
            android:onTextChanged="@{ (txt, st, ed, cn) -> vm.onCtcChanged(txt.toString()) }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal4"
            android:onClick="@{ () -> vm.onSdSaveClicked() }"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>